--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxColumnManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxColumnManagerWindow.zul
@@ -57,8 +57,8 @@
         </hbox>
 
         <div sclass="fr">
-            <ok-button label="${c:l('listbox.ok')}" forward="onOk" />
-            <cancel-button label="${c:l('listbox.storno')}" forward="onStorno"/>
+            <button label="${c:l('listbox.ok')}" forward="onOk" src="${zkdl:i('ok.png')}" />
+            <button label="${c:l('listbox.storno')}" forward="onStorno" src="${zkdl:i('cancel.png')}" />
         </div>
         
         <n:br class="clear" />
