Listbox export manager - migration from jExcelApi library to Apache POI.

--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
@@ -63,7 +63,7 @@
             </columns>
             <rows>
                 <row>
-                    <label value="${c:l('listbox.exportManager.recordCount')}" />
+                    <label value="@{ctl.recordCountLabel}" />
                     <intbox value="@{ctl.rows}" width="98%" />
                 </row>
                 <row>
