--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
@@ -6,10 +6,10 @@
 <?page title="Listbox manager"?>
 
 <zk xmlns="http://www.zkoss.org/2005/zul" xmlns:n="native">
-    <window  onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="660px" id="winListboxManager" closable="true" 
-             border="none"  self="@{define(content)}"
+    <window  onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="680px" id="winListboxManager" closable="true"
+             border="normal"  self="@{define(content)}"
              apply="cz.datalite.zk.components.list.window.controller.ListboxExportManagerController" 
-             sclass="window manager-window">
+             sclass="window">
       <div sclass="editable padding10">
 
         <hbox sclass="margin-bottom15">
@@ -18,47 +18,41 @@
         </hbox>
 
         <hbox sclass="margin-bottom15">
-            <vbox spacing="0">
+            <vbox>
                 <label value="${c:l('listbox.exportManager.hidden')}" sclass="bold" />
-                <listbox height="250px" id="unusedListbox" model="@{ctl.selector.unusedModel}" width="250px"
-                         onDrop="ctl.selector.moveItem(event.dragged, self)" droppable="true" multiple="true"
-                         sclass="margin-top5 margin-bottom5">
-                    <listitem self="@{each=row}" value="@{row}" draggable="true" droppable="true"
-                              onDrop="ctl.selector.moveItem(event.dragged, self)">
-                        <listcell label="@{row.label}" visible="@{row.unusedModelItemVisible}"/>
+                <listbox height="250px" id="unusedListbox" model="@{ctl.selector.unusedModel}" width="250px" onDrop="ctl.selector.moveItem(event.dragged, self)" droppable="true" multiple="true">
+                    <listitem self="@{each=row}" value="@{row}" draggable="true" droppable="true" onDrop="ctl.selector.moveItem(event.dragged, self)">
+                        <listcell label="@{row.label}" visible="@{row.unusedModelItemVisible}" />
                     </listitem>
                 </listbox>
-                <hbox width="250px" align="center">
-                  <label value="${c:l('listbox.columnManager.quickFilter')}:" sclass="bold" />  
-                  <textbox id="quickFilter" hflex="1" sclass="margin-bottom0" />
-                  <image src="${zkdl:i('remove16x16.png')}" sclass="margin-left3" style="cursor: pointer" tooltiptext="${c:l('listbox.filterManager.removeOne')}"  onClick="ctl.selector.onClearQuickFilter()" />
+                <hbox align="center">
+                  <label value="${c:l('listbox.columnManager.quickFilter')}:" sclass="bold" style="min-width: auto" />
+                  <textbox id="quickFilter" hflex="1" />
+                  <image src="${zkdl:i('remove16x16.png')}" sclass="margin-left4" style="cursor: pointer" tooltiptext="${c:l('listbox.filterManager.removeOne')}"  onClick="ctl.selector.onClearQuickFilter()" />
                 </hbox>
             </vbox>
 
-            <vbox sclass="arrow-butons margin-top50 margin-right5 margin-left5">
-                <button onClick="ctl.selector.onUnusedToUsedAllMove()" src="${zkdl:i('right2Arrow32x32.png')}" height="34px"/>
-                <button onClick="ctl.selector.onUnusedToUsedMove()" src="${zkdl:i('rightArrow32x32.png')}" height="34px"/>
-                <button onClick="ctl.selector.onUsedToUnusedMove()" src="${zkdl:i('leftArrow32x32.png')}" height="34px"/>
-                <button onClick="ctl.selector.onUsedToUnusedAllMove()" src="${zkdl:i('left2Arrow32x32.png')}" height="34px"/>
+            <vbox sclass="margin-top50 margin-right5 margin-left5">
+                <button onClick="ctl.selector.onUnusedToUsedAllMove()" src="${zkdl:i('right2Arrow32x32.png')}" height="auto"/>
+                <button onClick="ctl.selector.onUnusedToUsedMove()" src="${zkdl:i('rightArrow32x32.png')}" height="auto"/>
+                <button onClick="ctl.selector.onUsedToUnusedMove()" src="${zkdl:i('leftArrow32x32.png')}" height="auto"/>
+                <button onClick="ctl.selector.onUsedToUnusedAllMove()" src="${zkdl:i('left2Arrow32x32.png')}" height="auto"/>
             </vbox>
 
-            <vbox spacing="0">
+            <vbox>
                 <label value="${c:l('listbox.exportManager.displayed')}" sclass="bold" />
-                <listbox height="250px" id="usedListbox" model="@{ctl.selector.usedModel}" width="250px"
-                         onDrop="ctl.selector.moveItem(event.dragged, self)" droppable="true" multiple="true"
-                         sclass="margin-top5 margin-bottom5">
-                    <listitem self="@{each=row}" value="@{row}" draggable="true" droppable="true"
-                              onDrop="ctl.selector.moveItem(event.dragged, self)">
-                        <listcell label="@{row.label}"/>
+                <listbox height="250px" id="usedListbox" model="@{ctl.selector.usedModel}" width="250px" onDrop="ctl.selector.moveItem(event.dragged, self)" droppable="true" multiple="true">
+                    <listitem self="@{each=row}" value="@{row}" draggable="true" droppable="true" onDrop="ctl.selector.moveItem(event.dragged, self)">
+                        <listcell label="@{row.label}" />
                     </listitem>
                 </listbox>
             </vbox>
 
-            <vbox sclass="arrow-butons margin-top50 margin-left5">
-                <button onClick="ctl.selector.onTopMove()" src="${zkdl:i('up2Arrow32x32.png')}" height="34px"/>
-                <button onClick="ctl.selector.onUpMove()" src="${zkdl:i('upArrow32x32.png')}" height="34px"/>
-                <button onClick="ctl.selector.onDownMove()" src="${zkdl:i('downArrow32x32.png')}" height="34px"/>
-                <button onClick="ctl.selector.onBottomMove()" src="${zkdl:i('down2Arrow32x32.png')}" height="34px"/>
+            <vbox sclass="margin-top50 margin-left5">
+                <button onClick="ctl.selector.onTopMove()" src="${zkdl:i('up2Arrow32x32.png')}" height="auto"/>
+                <button onClick="ctl.selector.onUpMove()" src="${zkdl:i('upArrow32x32.png')}" height="auto"/>
+                <button onClick="ctl.selector.onDownMove()" src="${zkdl:i('downArrow32x32.png')}" height="auto"/>
+                <button onClick="ctl.selector.onBottomMove()" src="${zkdl:i('down2Arrow32x32.png')}" height="auto"/>
             </vbox>
         </hbox>
 
@@ -70,15 +64,15 @@
             <rows>
                 <row>
                     <label value="@{ctl.recordCountLabel}" />
-                    <intbox value="@{ctl.rows}" hflex="true" sclass="margin-bottom1" id="intboxRows"/>
+                    <intbox value="@{ctl.rows}" width="98%" />
                 </row>
                 <row>
                     <label value="${c:l('listbox.exportManager.sheetName')}" />
-                    <textbox value="@{ctl.sheetName}" hflex="true" sclass="margin-bottom1" />
+                    <textbox value="@{ctl.sheetName}" width="98%" />
                 </row>
                 <row>
                     <label value="${c:l('listbox.exportManager.fileName')}" />
-                    <textbox value="@{ctl.fileName}" hflex="true" sclass="margin-bottom1" id="textboxFileName"/>
+                    <textbox value="@{ctl.fileName}" width="98%" />
                 </row>
             </rows>
         </grid>
@@ -87,8 +81,6 @@
             <button label="${c:l('listbox.ok')}" forward="onOk" src="${zkdl:i('ok.png')}" />
             <button label="${c:l('listbox.storno')}" forward="onStorno" src="${zkdl:i('cancel.png')}" />
         </div>
-        
-        <n:br class="clear" />
         
       </div>
     </window>
